Add mechanism to contextualise data entry form depending on publication type.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/library_ipf/trunk@24235 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/templates/library_publication.html
+++ b/templates/library_publication.html
@@ -12,7 +12,7 @@
 		<div><b><{$smarty.const._CO_LIBRARY_PUBLICATION_PUBLISHER}></b>: <{$library_publication.publisher}></div>
 		<div><b><{$smarty.const._CO_LIBRARY_PUBLICATION_FORMAT}></b>: <{$library_publication.format}></div>
 		<div><b><{$smarty.const._CO_LIBRARY_PUBLICATION_FILE_SIZE}></b>: <{$library_publication.file_size}></div>
-		<div><b><{$smarty.const._CO_LIBRARY_PUBLICATION_COVER}></b>: <{$library_publication.cover}></div>
+		<div><b><{$smarty.const._CO_LIBRARY_PUBLICATION_IMAGE}></b>: <{$library_publication.image}></div>
 		<div><b><{$smarty.const._CO_LIBRARY_PUBLICATION_DATE}></b>: <{$library_publication.date}></div>
 		<div><b><{$smarty.const._CO_LIBRARY_PUBLICATION_SOURCE}></b>: <{$library_publication.source}></div>
 		<div><b><{$smarty.const._CO_LIBRARY_PUBLICATION_LANGUAGE}></b>: <{$library_publication.language}></div>
