--- a/module.css
+++ b/module.css
@@ -3,6 +3,6 @@
 .library_breadcrumb {font-size: 0.8em; line-height: 18px;}
 .library_adminlinks {padding-top: 15px; padding-bottom: 5px; font-size: 0.8em; text-align: center; line-height: 18px;}
 
-.library_post_container {
+.library_comment_container {
 	margin-bottom: 35px;
 }
