--- a/templates/library_header.html
+++ b/templates/library_header.html
@@ -7,4 +7,4 @@
 	<{/if}>
 </div>
 
-<div id="library_submit" style="clear: both;"><{if $library_showSubmitLink && $library_userCanSubmit}><a href="<{$library_url}>post.php?op=mod"><{$smarty.const._MI_LIBRARY_POST_ADD}></a><{/if}></div>
+<div id="library_submit" style="clear: both;"><{if $library_showSubmitLink && $library_userCanSubmit}><a href="<{$library_url}>publication.php?op=mod"><{$smarty.const._MI_LIBRARY_PUBLICATION_ADD}></a><{/if}></div>
