--- a/templates/library_footer.html
+++ b/templates/library_footer.html
@@ -1,25 +1,28 @@
-<!-- <div id="library_rss"><a href="<{$library_rss_url}>"><img src="<{$library_url}>images/rss.png" alt="<{$library_rss_info}>" title="<{$library_rss_info}>"></a></div> //-->
 <{if $library_is_admin}>
 <div class="library_adminlinks"><{$library_adminpage}></div>
 <{/if}>
-<{if $library_post_comment}>
+
+<{if $library_publication_comment}>
 <table id="comments_container" border="0" width="100%" cellspacing="1" cellpadding="0" align="center" >
 	<tr>
 		<td colspan="3" align ="<{$smarty.const._GLOBAL_LEFT}>">
 			<div style="text-align: center; padding: 3px; margin:3px;"> <{$commentsnav}> <{$lang_notice}></div>
-			<div style="margin:3px; padding: 3px;">
-				<!-- start comments loop -->
-				<{if $comment_mode == "flat"}>
-				<{include file="db:system_comments_flat.html"}>
-				<{elseif $comment_mode == "thread"}>
-				<{include file="db:system_comments_thread.html"}>
-				<{elseif $comment_mode == "nest"}>
-				<{include file="db:system_comments_nest.html"}>
-				<{/if}>
-				<!-- end comments loop -->
-			</div>
+				<div style="margin:3px; padding: 3px;">
+				
+					<!-- start comments loop -->
+					<{if $comment_mode == "flat"}>
+						<{include file="db:system_comments_flat.html"}>
+					<{elseif $comment_mode == "thread"}>
+					<{include file="db:system_comments_thread.html"}>
+						<{elseif $comment_mode == "nest"}>
+					<{include file="db:system_comments_nest.html"}>
+					<{/if}>
+					<!-- end comments loop -->
+					
+				</div>
 		</td>
 	</tr>
 </table>
 <{/if}>
+
 <{includeq file='db:system_notification_select.html'}>
