--- a/templates/library_header.html
+++ b/templates/library_header.html
@@ -1,3 +1,5 @@
+<{if $library_show_breadcrumb == TRUE}>
+
 <div class="library_headertable">
 	<{if $library_module_home}>
 	<span class="library_modulename"><{$library_module_home}></span>
@@ -6,3 +8,13 @@
 	<span class="library_breadcrumb"><{if $library_module_home}>&gt;<{/if}><{$library_category_path}></span>
 	<{/if}>
 </div>
+
+<{else}>
+
+	<{if $library_page_title}>
+		<h1>
+			<{$library_page_title}><{if $library_tag_name}> - <{$library_tag_name}><{/if}>
+		</h1>
+	<{/if}>
+	
+<{/if}>
