--- a/templates/library_publication_sound.html
+++ b/templates/library_publication_sound.html
@@ -1,5 +1,13 @@
-<div id="library_publication_container">
-	<h2><{$library_publication.title}></h2>
+<div class="library_publication_container">
+	<{if $library_publication_view_mode == 'single'}>
+		<{if $library_publication.identifier}>
+			<h2><a href="<{$library_publication.identifier}>"><{$library_publication.title}></a></h2>
+		<{else}>
+			<h2><{$library_publication.title}></h2>
+		<{/if}>		
+	<{else}>
+		<h2><{$library_publication.itemLink}></a></h2>
+	<{/if}>
 	<div class="itemInfo">
 		<{if $library_publication.creator}><{$smarty.const._CO_LIBRARY_PUBLICATION_AUTHORS}> <{$library_publication.creator}><{/if}>
 		<{if $library_publication.creator && ($library_publication.date || $library_publication.counter || $library_publication.tags)}> | <{/if}>
