Enabled streaming for sound type publications.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/library_ipf/trunk@24262 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/templates/library_publication_sound.html
+++ b/templates/library_publication_sound.html
@@ -26,8 +26,10 @@
 	<div class="library_publication_metadata">
 		<{if $library_publication.identifier || $library_publication.oai_identifier}>
 			<p>
-				<{if $library_publication.identifier}><strong><a href="<{$library_publication.identifier}>">>> <{$smarty.const._CO_LIBRARY_PUBLICATION_DOWNLOAD}></a></strong><{/if}>
-				<{if $library_publication.identifier && $library_publication.oai_identifier}> | <{/if}>
+				<{if $library_publication.identifier}><strong>>>> <a href="<{$library_publication.identifier}>"> <{$smarty.const._CO_LIBRARY_PUBLICATION_DOWNLOAD}></a></strong><{/if}>
+				<{if $library_publication.identifier && ($library_publication.streamingLink || $library_publication.oai_identifier)}> | <{/if}>
+				<{if $library_publication.streamingLink}><{$library_publication.streamingLink}><{/if}>
+				<{if ($library_publication.identifier || $library_publication.streamingLink) && $library_publication.oai_identifier}> | <{/if}>
 				<{if $library_publication.oai_identifier}><{$library_publication.oai_identifier}><{/if}>
 			</p>
 		<{/if}>
