--- a/module.css
+++ b/module.css
@@ -8,9 +8,13 @@
 * @version		$Id$
 */
 .library_headertable {padding: 0; margin: 0; border-bottom: 1px solid; margin-bottom: 10px;}
-.library_modulename {font-size: 0.8em; text-align: left; font-weight: bold; padding-right: 0.3em;	line-height: 18px;}
+.library_modulename {font-size: 0.8em; text-align: left; font-weight: bold; padding-right: 0.3em; line-height: 18px;}
 .library_breadcrumb {font-size: 0.8em; line-height: 18px;}
 .library_adminlinks {padding-top: 15px; padding-bottom: 5px; font-size: 0.8em; text-align: center; line-height: 18px;}
+
+.library_publication_container {
+	overflow: auto;
+}
 
 .library_publication_image {
 	float: right;
