--- a/module_rtl.css
+++ b/module_rtl.css
@@ -8,15 +8,31 @@
 * @version		$Id$
 */
 .library_headertable {padding: 0; margin: 0; border-bottom: 1px solid; margin-bottom: 10px;}
-.library_modulename {font-size: 0.8em; text-align: left; font-weight: bold; padding-right: 0.3em;	line-height: 18px;}
+.library_modulename {font-size: 0.8em; text-align: left; font-weight: bold; padding-right: 0.3em; line-height: 18px;}
 .library_breadcrumb {font-size: 0.8em; line-height: 18px;}
 .library_adminlinks {padding-top: 15px; padding-bottom: 5px; font-size: 0.8em; text-align: center; line-height: 18px;}
 
-.library_publication_metadata
-{
+.library_publication_container {
+	overflow: auto;
+}
+
+.library_publication_image {
 	float: right;
-	margin: 1em;
-	background-colour: #333333;
+	margin: 1em 0em 1em 1em;
+	border: solid;
+	border-color: #000000;
+	border-width: 1px;
+}
+
+.library_publication_metadata {
+	float: right;
+	margin: 1em 0em 1em 1em;
+	padding: 1em;
+	background-color: #ccccff;
+	border: solid;
+	border-color:#000000;
+	border-width: 1px;
+	font-size: 0.8em;
 }
 
 .library_comment_container {
