Adding publication timeline page.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/library_ipf/trunk@24266 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/templates/library_header.html
+++ b/templates/library_header.html
@@ -5,7 +5,7 @@
 	<span class="library_modulename"><{$library_module_home}></span>
 	<{/if}>
 	<{if $library_category_path}>
-	<span class="library_breadcrumb"><{if $library_module_home}>&gt;<{/if}><{$library_category_path}></span>
+	<span class="library_breadcrumb"><{if $library_module_home}>&gt;&nbsp;<{/if}><{$library_category_path}></span>
 	<{/if}>
 </div>
 
