--- a/templates/library_timeline.html
+++ b/templates/library_timeline.html
@@ -1,38 +1,38 @@
 <{includeq file='db:library_header.html'}>
 
-<!-- template based on that of the original XOOPS News module -->
+<!-- Template based on that of the original XOOPS News module -->
 
 <{if $show_publications == TRUE}>
-<div class="library_separator"><{$lang_publicationtotal}></div>
-<table class="library_separator">
-<tr>
-	<th><{$lang_publications}></th>
-	<th align="center"><{$lang_tags}></th>
-	<th align="center"><{$lang_views}></th>
-	<th align="center"><{$lang_date}></th>
-</tr>
-<{foreach item=publication from=$publications}>
-<tr class="<{cycle values="even,odd"}>">
-	<td><{$publication.title}></td>
-	<td><{if $publication.tags}><{$publication.tags}><{/if}></td>
-	<td align="center"><{$publication.counter}></td>
-	<td align="center"><{$publication.date}></td>
-</tr>
-<{/foreach}>
-</table>
+	<div class="library_separator"><{$lang_publicationtotal}></div>
+	<table class="library_separator">
+		<tr>
+			<th><{$lang_publications}></th>
+			<th align="center"><{$lang_tags}></th>
+			<th align="center"><{$lang_views}></th>
+			<th align="center"><{$lang_date}></th>
+		</tr>
+		<{foreach item=publication from=$publications}>
+			<tr class="<{cycle values="even,odd"}>">
+				<td><{$publication.title}></td>
+				<td><{if $publication.tags}><{$publication.tags}><{/if}></td>
+				<td align="center"><{$publication.counter}></td>
+				<td align="center"><{$publication.submission_time}></td>
+			</tr>
+		<{/foreach}>
+	</table>
 <{/if}>
 
 <table>
-<tr>
-    <th><{$smarty.const._CO_LIBRARY_ARCHIVES}></th>
-</tr>
-<{foreach item=year from=$years}>
-<{foreach item=month from=$year.months}>
-<tr class="even">
-    <td><a href="'<{$icms_url}>/modules/library/timeline.php?year=<{$year.number}>&amp;month=<{$month.number}>"><{$month.string}> <{$year.number}></a></td>
-</tr>
-<{/foreach}>
-<{/foreach}>
+	<tr>
+		<th><{$smarty.const._CO_LIBRARY_TIMELINE}></th>
+	</tr>
+	<{foreach item=year from=$years}>
+		<{foreach item=month from=$year.months}>
+			<tr class="even">
+				<td><a href="<{$icms_url}>/modules/library/timeline.php?year=<{$year.number}>&amp;month=<{$month.number}>"><{$month.string}> <{$year.number}></a></td>
+			</tr>
+		<{/foreach}>
+	<{/foreach}>
 </table>
 
 <{includeq file='db:library_footer.html'}>
