Add RSS icons and feed auto-discovery links in the module header.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/library_ipf/trunk@24281 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/templates/library_header.html
+++ b/templates/library_header.html
@@ -12,7 +12,8 @@
 <{else}>
 
 	<{if $library_page_title}>
-		<h1>
+		<h1><a href="<{$library_rss_link}>" title="<{$library_rss_title}>">
+				<img src="./images/rss.png" alt="RSS" /></a>
 			<{$library_page_title}><{if $library_tag_name}> - <{$library_tag_name}><{/if}>
 		</h1>
 	<{/if}>
