Enable dynamic image resizing via module preferences.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/library_ipf/trunk@24284 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/templates/library_publication_moving_image.html
+++ b/templates/library_publication_moving_image.html
@@ -19,7 +19,7 @@
 	</div>
 	<{if $library_publication.image}>
 		<div class="library_publication_image">
-			<{$library_publication.image}>
+			<{resized_image file=$library_publication.image width=$library_publication.screenshot_width height=$library_publication.screenshot_height fit="inside"}>
 		</div>
 	<{/if}>
 	<!-- Float extra metadata in a box -->
