In single category view, available subcats are now displayed above the publications.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/library_ipf/trunk@24308 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/module.css
+++ b/module.css
@@ -39,6 +39,10 @@
 	font-size: 0.8em;
 }
 
+.library_subcategories {
+	margin:1em 0em 1em 0em;
+}
+
 .library_comment_container {
 	margin-bottom: 35px;
 }
