Get publication count for categories.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/library_ipf/trunk@24317 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/templates/library_publication.html
+++ b/templates/library_publication.html
@@ -15,7 +15,7 @@
 	<table>
 		<tr>
 		<{foreach item=subcat from=$library_subcategories}>
-			<td><{$subcat.itemLink}></td>
+			<td><{$subcat.itemLink}> (<{$subcat.publicationCount}>)</td>
 			<{if $subcat.count is div by 2}>
 				</tr><tr>
 			<{/if}>
