Get publication count for tags. Maybe this should be added as a method to Sprockets.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/library_ipf/trunk@24318 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/templates/library_tag.html
+++ b/templates/library_tag.html
@@ -27,7 +27,7 @@
 	<{if $library_tag_list}>
 		<ul>
 			<{foreach item=tag from=$library_tag_list}>
-				<li><strong><{$tag.itemLink}></strong></li>
+				<li><strong><{$tag.itemLink}></strong> (<{$tag.publicationCount}>)</li>
 			<{/foreach}>
 		</ul>	
 	<{/if}>
