Categories only display the number of publications inside them if they *have* some. Makes the display less annoying.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/library_ipf/trunk@24367 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/templates/library_tag.html
+++ b/templates/library_tag.html
@@ -6,11 +6,11 @@
 	<table>
 		<tr>
 		<{foreach item=category from=$library_category_list}>
-			<td><strong><{$category.itemLink}></strong> (<{$category.publicationCount}>)
+			<td><strong><{$category.itemLink}></strong> <{if $category.publicationCount}>(<{$category.publicationCount}>)<{/if}>
 				<{if $category.subcategories}>
 					<ul class="library_subcategories">
 					<{foreach item=subcat from=$category.subcategories}>
-						<li style="list-style-type:none; list-style-position: inside;"><{$subcat.itemLink}></li>
+						<li style="list-style-type:none; list-style-position: inside;"><{$subcat.itemLink}> <{if $subcat.publicationCount}>(<{$subcat.publicationCount}>)<{/if}></li>
 					<{/foreach}>
 					</ul>
 				<{/if}>
