Add a splash page when downloading, to increment the counter. Download is initiated with a header() but this might not be adequate - need to look into all the 'pragma' stuff.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/library_ipf/trunk@24382 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/templates/library_publication.html
+++ b/templates/library_publication.html
@@ -47,4 +47,8 @@
 	<{$library_publication_table}>
 <{/if}>
 
+<{if $library_publication_unavailable}>
+	<div><{$smarty.const._CO_LIBRARY_PUBLICATION_UNAVAILABLE}></div>
+<{/if}>
+
 <{includeq file='db:library_footer.html'}>
