Remove incorrect closing anchor tag on item titles.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/library_ipf/trunk@25018 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/templates/library_publication_collection.html
+++ b/templates/library_publication_collection.html
@@ -6,7 +6,7 @@
 			<h2><{$library_publication.title}></h2>
 		<{/if}>		
 	<{else}>
-		<h2><{$library_publication.itemLink}></a></h2>
+		<h2><{$library_publication.itemLink}></h2>
 	<{/if}>
 	<div class="itemInfo library_separator">
 		<{if $library_publication.creator}><{$smarty.const._CO_LIBRARY_PUBLICATION_AUTHORS}> <{$library_publication.creator}><{/if}>
