--- a/templates/library_publication_text.html
+++ b/templates/library_publication_text.html
@@ -6,7 +6,7 @@
 			<h2><{$library_publication.title}></h2>
 		<{/if}>		
 	<{else}>
-		<h2><{$library_publication.itemLink}></a></h2>
+		<h2><{$library_publication.itemLink}></h2>
 	<{/if}>
 	<div class="itemInfo library_separator">
 		<{if $library_publication.creator}><{$smarty.const._CO_LIBRARY_PUBLICATION_AUTHORS}> <{$library_publication.creator}><{/if}>
