- Fixed broken default language preference when adding new publication
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/library_ipf/trunk@25095 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/templates/library_publication_image.html
+++ b/templates/library_publication_image.html
@@ -16,6 +16,9 @@
 		<{if $library_publication.counter}><{$library_publication.counter}> <{$smarty.const._CO_LIBRARY_PUBLICATION_VIEWS}><{/if}>
 		<{if ($library_publication.creator || $library_publication.date || $library_publication.counter) && $library_publication.tags}> | <{/if}>
 		<{if $library_publication.tags}><{$library_publication.tags}><{/if}>
+		<{if $library_is_admin}>
+			<{$library_publication.editItemLink}> <{$library_publication.deleteItemLink}>
+		<{/if}>
 	</div>
 	<!-- Image goes here -->
 	<{if $library_publication.image}>
