--- a/templates/library_publication_text.html
+++ b/templates/library_publication_text.html
@@ -54,9 +54,14 @@
 		<{if $library_publication.rights}><p><strong><{$smarty.const._CO_LIBRARY_PUBLICATION_RIGHTS}></strong>: <{$library_publication.rights}></p><{/if}>
 	</div>
 	<div>
-		<!-- If there is no extended text, display the description field instead -->
-		<{if $library_publication.description || $library_publication.extended_text}>
-			<{if $library_publication.extended_text}><{$library_publication.extended_text}>
+		<!-- If there is no extended text in summary mode, display the description field instead -->
+		<{if $library_publication_summaries}>
+			<{if $library_publication.description}>
+				<{$library_publication.description}>
+			<{/if}>
+		<{else}>
+			<{if $library_publication.extended_text}>
+				<{$library_publication.extended_text}>
 			<{else}>
 				<{$library_publication.description}>
 			<{/if}>
