Improve templates comments. Fix issue with html tags being encoded in the extended_text field. Set HTML always-on, linebreaks optional but default off (legacy purposes).
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/library_ipf/trunk@25154 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/templates/library_publication.html
+++ b/templates/library_publication.html
@@ -6,6 +6,7 @@
 </div>
 
 <{if $library_publication}>
+	<!-- Single publication view -->
 	<{include file=$library_publication.subtemplate}>
 <{/if}>
 
@@ -32,6 +33,7 @@
 		<div>
 			<{if $library_navbar }><{$library_navbar}><{/if}>
 		</div>
+		<!-- Index (summary) view, display the description field instead of extended_text -->
 		<{foreach item=library_publication from=$library_publication_summaries}>
 			<{include file=$library_publication.subtemplate}>
 		<{/foreach}>
